# macdylibbundler

./: CMakeLists.txt  Makefile  README.md
src/: Dependency.cpp  Dependency.h  DylibBundler.cpp  DylibBundler.h  ParallelFor.h  ParallelForEach.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  main.cpp
